tests/functional/lang/eval-fail-remove.err.exp
error: attribute 'x' missing
       at /pwd/lang/eval-fail-remove.nix:4:3:
            3| in
            4|   (removeAttrs attrs ["x"]).x
             |   ^
            5|
       Did you mean y?
